# omweather-py-purebuild

./: pyproject.toml
tests/: test_open_meteo_forecast_api.py
