[project]
name = "weatherforecast"
version = "0.0.1"
description = "sample packages by pure-toml"

dependencies = [
    "requests==2.31.0"
]


[project.scripts]
weatherforecast = "weatherforecast:main"


# [tool.setuptools]
# package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

